[package]
name = "cache-vault"
license = "MIT OR Apache-2.0"
authors = ["okkez <okkez000@gmail.com>"]
description = "TODO"
repository = "https://github.com/okkez/cache-vault"
homepage = "https://github.com/okkez/cache-vault"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
base32 = "0.5.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
futures = "0.3.30"
keyring = "2.3.3"
sqlx = { version = "0.7.4", features = ["sqlite", "chrono", "runtime-tokio-native-tls"] }
tempfile = "3.12.0"
thiserror = "1.0.61"
tokio = { version = "1.39.2", features = ["full"] }

[lib]
name = "cache_vault"

[[example]]
name = "chacha20"
path = "examples/chacha20.rs"
